src/objects/Price_Schedule__c.object
<CustomObject>
    <fields>
        <fullName>Charge_Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Charge Type</label>
        <referenceTo>Charge_Type__c</referenceTo>
        <relationshipLabel>Price Schedules</relationshipLabel>
        <relationshipName>Price_Schedules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Grace_Period_Format__c</fullName>
        <label>Grace Period Format</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>days</fullName>
                </value>
                <value>
                    <fullName>months</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Grace_Period_Mechanism__c</fullName>
        <label>Grace Period Mechanism</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>initial</fullName>
                </value>
                <value>
                    <fullName>every</fullName>
                </value>
                <value>
                    <fullName>end</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Grace_Period__c</fullName>
        <label>Grace Period</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Initial_Best_Rate_Operator__c</fullName>
        <label>Initial Best Rate Operator</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>less than</fullName>
                </value>
                <value>
                    <fullName>between</fullName>
                </value>
                <value>
                    <fullName>more than</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Initial_Best_Rate_Value__c</fullName>
        <label>Initial Best Rate Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Best_Rate_Operator__c</fullName>
        <label>Last Best Rate Operator</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>less than</fullName>
                </value>
                <value>
                    <fullName>between</fullName>
                </value>
                <value>
                    <fullName>more than</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Last_Best_Rate_Value__c</fullName>
        <label>Last Best Rate Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Passing_Rate_Operator__c</fullName>
        <label>Last Passing Rate Operator</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>less than</fullName>
                </value>
                <value>
                    <fullName>between</fullName>
                </value>
                <value>
                    <fullName>more than</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Last_Passing_Rate_Value__c</fullName>
        <label>Last Passing Rate Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Term__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Payment Term</label>
        <referenceTo>Payment_Term__c</referenceTo>
        <relationshipLabel>Price Schedules</relationshipLabel>
        <relationshipName>Price_Schedules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Percent_Increase__c</fullName>
        <inlineHelpText>Only for renewal/downsize</inlineHelpText>
        <label>Percent Increase</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Price_Rule__c</fullName>
        <label>Price Rule</label>
        <referenceTo>Price_Rule__c</referenceTo>
        <relationshipLabel>Price Schedules</relationshipLabel>
        <relationshipName>Price_Schedules</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Rate_Cap__c</fullName>
        <label>Rate Cap</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Rate_Increase_Mechanism__c</fullName>
        <inlineHelpText>Only for renewal/downsize</inlineHelpText>
        <label>Rate Increase Mechanism</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Fixed Rate</fullName>
                    <default>true</default>
                    <label>Fixed Rate</label>
                </value>
                <value>
                    <fullName>Fixed Percentage</fullName>
                </value>
                <value>
                    <fullName>Use RERA Index</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rate__c</fullName>
        <label>Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Renewal_Downsize_Rate_To_Use__c</fullName>
        <inlineHelpText>Only for renewal/downsize</inlineHelpText>
        <label>Renewal/Downsize Rate To Use</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Initial Best Rate</fullName>
                </value>
                <value>
                    <fullName>Last Best Rate</fullName>
                </value>
                <value>
                    <fullName>Last Passing Rate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Service_Charge_Mechanism__c</fullName>
        <label>Service Charge Mechanism</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Base-year Stop</fullName>
                </value>
                <value>
                    <fullName>Gross-up</fullName>
                </value>
                <value>
                    <fullName>Pass-through</fullName>
                </value>
                <value>
                    <fullName>Inclusive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Total_Leased_Area_Operator__c</fullName>
        <label>Total Leased Area Operator</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>less than</fullName>
                </value>
                <value>
                    <fullName>between</fullName>
                </value>
                <value>
                    <fullName>more than</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Leased_Area_Value__c</fullName>
        <label>Total Leased Area Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transaction_Type__c</fullName>
        <label>Transaction Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Renewal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Transactional_Unit__c</fullName>
        <label>Transactional Unit</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sq ft</fullName>
                </value>
                <value>
                    <fullName>Unit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Price Schedule</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Payment_Term__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Price Schedule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Price Schedules</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Specify_Grace_period</fullName>
        <active>true</active>
        <description>Please specify Grace Period (Period) and Grace Period Mechanism.</description>
        <errorConditionFormula>OR( 
AND(Grace_Period__c &gt; 0, 
ISBLANK(TEXT(  Grace_Period_Format__c ))), 

AND(Grace_Period__c &gt; 0, 
ISBLANK(TEXT(Grace_Period_Mechanism__c)) 
) 
)</errorConditionFormula>
        <errorMessage>Please specify Grace Period (Period) and Grace Period Mechanism.</errorMessage>
    </validationRules>
</CustomObject>